# ebi-metabo-training

./: .Rprofile  .gitignore  AGENTS.md  CONTRIBUTING.md  LICENSE  Makefile  README.md
2025/: metabo_prior_knowledge_functional_analysis.ipynb
data/: README.md
docs/: 00_setup.md  01_setup_r.md  02_setup_python.md  03_setup_colab.md  04_agenda.md  05_glossary.md
env/: DESCRIPTION  build_notebook.py  install.R  pyproject.toml
notebooks/: metabo_R.ipynb  metabo_python.ipynb
scripts/R/: 01_load_and_explore.R  01_load_and_explore_ids.R  01_omnipathr_metabolomics.R  01_prior_knowledge.R  02_differential.R  02_id_workflow.R  02_prior_knowledge.R  03_id_to_pk.R  03_id_translation.R  04_enrichment.R  04_prior_knowledge.R  05_enrichment.R  05_prior_knowledge.R  06_network_viz.R  88_differential_analysis_cells.R  99_appendix_legacy.R  _utils.R
scripts/python/: 01_client_intro.py  02_id_and_orthology.py  03_cosmos_pkn_client.py  04_metabo_gem_raw.py  05_metabo_brenda.py  _utils.py
trainer/: README.md  build_rlib.sh  colab_smoke_test.ipynb  install-nix.sh  upload_rlib.sh  vm_smoke_test.sh
