[project]
name = "metabo2026"
version = "0.1.0"
description = "EMBL-EBI 2026 metabolomics training materials"
readme = "../README.md"
license = "BSD-3-Clause"
requires-python = ">=3.12,<3.13"

dependencies = [
    "omnipath-client[pandas,polars]",
    "omnipath-metabo",
    "pandas>=2.2",
    "polars>=1.0",
    "pyarrow>=15.0",
    "matplotlib>=3.8",
    "networkx>=3.2",
    "ipykernel>=6.29",
    "jupyterlab>=4.2",
    "jupytext>=1.16",
    "nbconvert>=7.16",
]

[project.optional-dependencies]
graph = ["annnet"]
dev = ["pytest>=8", "ruff>=0.6"]

[tool.uv.sources]
# The saezlab Python packages are pre-alpha; the published release tags do
# not yet correspond to working installs. We pin every saezlab dep — direct
# AND transitive — to its default branch so uv resolves a coherent set of
# HEADs. Switch to specific tags or commits once the packages stabilise.
omnipath-client = { git = "https://github.com/saezlab/omnipath-client.git", branch = "master" }
omnipath-metabo = { git = "https://github.com/saezlab/omnipath-metabo.git", branch = "main" }
omnipath-utils  = { git = "https://github.com/saezlab/omnipath-utils.git",  branch = "main" }
dlmachine       = { git = "https://github.com/saezlab/download-manager.git", branch = "main" }
pypath-omnipath = { git = "https://github.com/saezlab/pypath.git",          branch = "master" }
pkg-infra       = { git = "https://github.com/saezlab/pkg-infra.git",       branch = "main" }
annnet          = { git = "https://github.com/saezlab/annnet.git",          branch = "main" }

[tool.uv]
# `uv.lock` records the resolved commits; commit the lock file to make
# installs reproducible across machines.

[tool.jupytext.formats]
"../scripts/R/" = "R:percent"
"../notebooks/" = "ipynb"
